Source/WebKit/UIProcess/API/ios/WKWebViewIOS.mm
@@ -1042,9 +1042,6 @@ static void changeContentOffsetBoundedInValidRange(UIScrollView *scrollView, Web
 
 - (void)_zoomToPoint:(WebCore::FloatPoint)point atScale:(double)scale animated:(BOOL)animated
 {
-    if (![_scrollView isScrollEnabled])
-        return;
-
     CFTimeInterval duration = 0;
     CGFloat zoomScale = contentZoomScale(self);
 
@@ -1187,8 +1184,6 @@ static WebCore::FloatPoint constrainContentOffset(WebCore::FloatPoint contentOff
 {
     LOG_WITH_STREAM(VisibleRects, stream << "_zoomToFocusRect:" << focusedElementRectInDocumentCoordinates << " selectionRect:" << selectionRectInDocumentCoordinates);
     UNUSED_PARAM(insideFixed);
-    if (![_scrollView isScrollEnabled])
-        return;
 
     const double minimumHeightToShowContentAboveKeyboard = 106;
     const CFTimeInterval formControlZoomAnimationDuration = 0.25;
